--- a/locale/zh/LC_MESSAGES/meerk40t.po
+++ b/locale/zh/LC_MESSAGES/meerk40t.po
@@ -12177,7 +12177,7 @@ msgid "Delay 5 seconds"
 msgstr "延迟 5 秒"
 
 #: meerk40t/core/elements/trace.py:382 meerk40t/core/elements/trace.py:475
-msgid "Method to use (one of quick, hull, complex, segment, circle)"
+msgid "Method to use (one of quick, hull, segment, circle)"
 msgstr "要使用的方法（其中之一：quick、hull、complex、segment、circle）"
 
 #: meerk40t/core/elements/trace.py:389
@@ -12189,7 +12189,7 @@ msgid "trace the given elements"
 msgstr "对给定元素进行轨迹跟踪"
 
 #: meerk40t/core/elements/trace.py:411 meerk40t/core/elements/trace.py:501
-msgid "Invalid method, please use one of quick, hull, complex, segment, circle."
+msgid "Invalid method, please use one of quick, hull, segment, circle."
 msgstr "无效的方法，请使用其中之一：quick、hull、complex、segment、circle。"
 
 #: meerk40t/core/elements/trace.py:421
