--- a/locale/nl/LC_MESSAGES/meerk40t.po
+++ b/locale/nl/LC_MESSAGES/meerk40t.po
@@ -10616,8 +10616,8 @@ msgstr ""
 #: meerk40t/core/elements/element_treeops.py:334
 #: meerk40t/core/elements/element_treeops.py:351
 #: meerk40t/gui/propertypanels/imageproperty.py:423
-msgid "RasterWizard"
-msgstr "RasterWizard"
+msgid "Raster-Wizard"
+msgstr "Raster-Wizard"
 
 #: meerk40t/core/elements/element_treeops.py:335
 #: meerk40t/gui/propertypanels/imageproperty.py:391
@@ -10629,7 +10629,7 @@ msgid "Apply: {script}"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:373
-msgid "Speed for Raster-Operation"
+msgid "Speed for Raster-operation"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:376
@@ -10638,7 +10638,7 @@ msgid "{speed}mm/s"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:386
-msgid "Speed for Vector-Operation"
+msgid "Speed for Vector-operation"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:411
@@ -10666,7 +10666,7 @@ msgid "Loops {loopvalue}"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:507
-msgid "Burn Direction"
+msgid "Burn direction"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:530
@@ -10701,7 +10701,7 @@ msgstr "Simulatie voor de geselecteerde bewerking(en) uitvoeren"
 
 #: meerk40t/core/elements/element_treeops.py:588
 #: meerk40t/grbl/gui/grblconfiguration.py:82
-msgid "Global Settings"
+msgid "Global operation settings"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:594
