--- a/locale/pt_PT/LC_MESSAGES/meerk40t.po
+++ b/locale/pt_PT/LC_MESSAGES/meerk40t.po
@@ -10621,8 +10621,8 @@ msgstr ""
 #: meerk40t/core/elements/element_treeops.py:334
 #: meerk40t/core/elements/element_treeops.py:351
 #: meerk40t/gui/propertypanels/imageproperty.py:423
-msgid "RasterWizard"
-msgstr "RasterWizard"
+msgid "Raster-Wizard"
+msgstr "Raster-Wizard"
 
 #: meerk40t/core/elements/element_treeops.py:335
 #: meerk40t/gui/propertypanels/imageproperty.py:391
@@ -10634,7 +10634,7 @@ msgid "Apply: {script}"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:373
-msgid "Speed for Raster-Operation"
+msgid "Speed for Raster-operation"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:376
@@ -10643,7 +10643,7 @@ msgid "{speed}mm/s"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:386
-msgid "Speed for Vector-Operation"
+msgid "Speed for Vector-operation"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:411
@@ -10671,7 +10671,7 @@ msgid "Loops {loopvalue}"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:507
-msgid "Burn Direction"
+msgid "Burn direction"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:530
@@ -10706,7 +10706,7 @@ msgstr "Executar simulação para a(s) operação(ões) seleccionada(s)"
 
 #: meerk40t/core/elements/element_treeops.py:588
 #: meerk40t/grbl/gui/grblconfiguration.py:82
-msgid "Global Settings"
+msgid "Global operation settings"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:594
