--- a/locale/de/LC_MESSAGES/meerk40t.po
+++ b/locale/de/LC_MESSAGES/meerk40t.po
@@ -18502,300 +18502,300 @@ msgstr "Lösche alle ausgewählten Arbeitsabläufe"
 
 #: meerk40t/core/elements/element_treeops.py:1407
 msgid "Remove items from operations"
-msgstr ""
+msgstr "Etferne Zuordnungen vom Arbeitsablauf"
 
 #: meerk40t/core/elements/element_treeops.py:1422
 msgid "Delete the selected operation"
-msgstr ""
+msgstr "Lösche den Arbeitsablauf"
 
 #: meerk40t/core/elements/element_treeops.py:1427 meerk40t/core/elements/element_treeops.py:1467
 msgid "Delete operation"
-msgstr ""
+msgstr "Lösche Arbeitsablauf"
 
 #: meerk40t/core/elements/element_treeops.py:1439
 msgid "Delete the selected binary object"
-msgstr ""
+msgstr "Lösche das ausgewählte Binärdatei"
 
 #: meerk40t/core/elements/element_treeops.py:1444
 msgid "Delete blob"
-msgstr ""
+msgstr "Lösche Binärdatei"
 
 #: meerk40t/core/elements/element_treeops.py:1460 meerk40t/core/elements/element_treeops.py:1606
 msgid "Delete the selected operations"
-msgstr ""
+msgstr "Lösche ausgewählte Arbeitsabläufe"
 
 #: meerk40t/core/elements/element_treeops.py:1492
 msgid "Delete the selected group and all its content"
-msgstr ""
+msgstr "Lösche Gruppe und ihren gesamten Inhalt"
 
 #: meerk40t/core/elements/element_treeops.py:1497
 msgid "Delete group"
-msgstr ""
+msgstr "Lösche Gruppe"
 
 #: meerk40t/core/elements/element_treeops.py:1511
 msgid "Delete the content of the loaded file"
-msgstr ""
+msgstr "Lösche den Inhalt der geladenen Datei"
 
 #: meerk40t/core/elements/element_treeops.py:1524
 msgid "Remove file"
-msgstr ""
+msgstr "Entferne Datei"
 
 #: meerk40t/core/elements/element_treeops.py:1651
 msgid "Make the selected object the reference object for alignment"
-msgstr ""
+msgstr "Mache das ausgewählte Element zum Referenz-Objekt"
 
 #: meerk40t/core/elements/element_treeops.py:1663
-msgid "CHange the selected polygon so that all sides have equal length"
-msgstr ""
+msgid "Change the selected polygon so that all sides have equal length"
+msgstr "Verändere das ausgewählte Polygon, dass alle Seiten gleich lang werden"
 
 #: meerk40t/core/elements/element_treeops.py:1776
 msgid "Recreate cutcode from the binary object"
-msgstr ""
+msgstr "Erzeuge den Cutcode aus der Binärdatei"
 
 #: meerk40t/core/elements/element_treeops.py:1785
 msgid "Recreate a path element from the selected cutcode"
-msgstr ""
+msgstr "Erzeuge ein Pfad-Element aus dem ausgewählten Cutcode"
 
 #: meerk40t/core/elements/element_treeops.py:1803
 msgid "Add an additional reference of the master element"
-msgstr ""
+msgstr "Füge eine weitere Referenz zum Masterelement hinzu"
 
 #: meerk40t/core/elements/element_treeops.py:1813
 msgid "Add more references of the master element"
-msgstr ""
+msgstr "Füge weitere Referenzen zum Masterelement hinzu"
 
 #: meerk40t/core/elements/element_treeops.py:1853
 msgid "Will create mising operations if required"
-msgstr ""
+msgstr "Erzeuge fehlende Arbeitsabläufe sofern benötigt"
 
 #: meerk40t/core/elements/element_treeops.py:1902
 msgid "Stick with existing operations only"
-msgstr ""
+msgstr "Nutze lediglich die vorhandenen Arbeitsabläufe"
 
 #: meerk40t/core/elements/element_treeops.py:1951
 msgid "Remove all assignments of elements to operations"
-msgstr ""
+msgstr "Entferne alle Elementverweise aus den Arbeitsabläufen"
 
 #: meerk40t/core/elements/element_treeops.py:1955 meerk40t/core/elements/element_treeops.py:2421
 msgid "Clear classification"
-msgstr ""
+msgstr "Lösche Klasifizierung"
 
 #: meerk40t/core/elements/element_treeops.py:1990
 msgid "<Previous set>"
-msgstr ""
+msgstr "<Vorheriges Set>"
 
 #: meerk40t/core/elements/element_treeops.py:2096
 msgid "Populate the operation template list at the bottom"
-msgstr ""
+msgstr "Befülle die Arbeitsablauf-Vorgaben aus der Statusleiste"
 
 #: meerk40t/core/elements/element_treeops.py:2126 meerk40t/core/elements/element_treeops.py:2135 meerk40t/core/elements/element_treeops.py:2144 meerk40t/core/elements/element_treeops.py:2153 meerk40t/core/elements/element_treeops.py:2162 meerk40t/core/elements/element_treeops.py:2172 meerk40t/core/elements/element_treeops.py:2180 meerk40t/core/elements/element_treeops.py:2191 meerk40t/core/elements/element_treeops.py:2219 meerk40t/core/elements/element_treeops.py:2234 meerk40t/core/elements/element_treeops.py:2249 meerk40t/core/elements/element_treeops.py:2262 meerk40t/core/elements/element_treeops.py:2277 meerk40t/core/elements/element_treeops.py:2294 meerk40t/core/elements/element_treeops.py:2310 meerk40t/core/elements/element_treeops.py:2326 meerk40t/core/elements/element_treeops.py:2339 meerk40t/core/elements/element_treeops.py:2353 meerk40t/core/elements/element_treeops.py:2368 meerk40t/core/elements/element_treeops.py:2739 meerk40t/core/elements/element_treeops.py:2746 meerk40t/core/elements/element_treeops.py:2753 meerk40t/core/elements/element_treeops.py:2760 meerk40t/core/elements/element_treeops.py:2767 meerk40t/core/elements/element_treeops.py:2774 meerk40t/core/elements/element_treeops.py:2781 meerk40t/core/elements/element_treeops.py:2790 meerk40t/core/elements/element_treeops.py:2798 meerk40t/core/elements/element_treeops.py:2805 meerk40t/core/elements/element_treeops.py:2813 meerk40t/core/elements/element_treeops.py:2822 meerk40t/core/elements/element_treeops.py:2829 meerk40t/core/elements/element_treeops.py:2836 meerk40t/core/elements/element_treeops.py:2843 meerk40t/core/elements/element_treeops.py:2852 meerk40t/core/elements/element_treeops.py:2869
 msgid "Add an operation to the tree"
-msgstr ""
+msgstr "Füge einen Arbeitsablauf zum Baum hinzu"
 
 #: meerk40t/core/elements/element_treeops.py:2447 meerk40t/core/elements/element_treeops.py:2464 meerk40t/core/elements/element_treeops.py:2476 meerk40t/core/elements/element_treeops.py:2488 meerk40t/core/elements/element_treeops.py:2500
 msgid "Apply hatch"
-msgstr ""
+msgstr "Wende Hatch an"
 
 #: meerk40t/core/elements/element_treeops.py:2516
 msgid "Apply a warp effect"
-msgstr ""
+msgstr "Wende Verzerrung an"
 
 #: meerk40t/core/elements/element_treeops.py:2520
 msgid "Apply warp"
-msgstr ""
+msgstr "Wende Verzerrung an"
 
 #: meerk40t/core/elements/element_treeops.py:2534
 msgid "Apply wobble"
-msgstr ""
+msgstr "Wende Wobble an"
 
 #: meerk40t/core/elements/element_treeops.py:2556 meerk40t/core/elements/element_treeops.py:2574 meerk40t/core/elements/element_treeops.py:2592 meerk40t/core/elements/element_treeops.py:2610
 msgid "Apply a wobble (contour follower)"
-msgstr ""
+msgstr "Wende Wobble (Linienfolger) an"
 
 #: meerk40t/core/elements/element_treeops.py:2654 meerk40t/core/elements/element_treeops.py:3082
 msgid "Create one copy of the selected elements"
-msgstr ""
+msgstr "Erzeuge eine Kopie der ausgewählten Elemente"
 
 #: meerk40t/core/elements/element_treeops.py:2666 meerk40t/core/elements/element_treeops.py:3093
 msgid "Create multiple copies of the selected elements"
-msgstr ""
+msgstr "Erzeuge mehrere Kopien der ausgewählten Elemente"
 
 #: meerk40t/core/elements/element_treeops.py:2882
 msgid "Reload the content of the file"
-msgstr ""
+msgstr "Lade den Dateiinhalt erneut"
 
 #: meerk40t/core/elements/element_treeops.py:2975
 msgid "Assign an operation to the selected elements"
-msgstr ""
+msgstr "Ordne den Elementen einen Arbeitsablauf zu"
 
 #: meerk40t/core/elements/element_treeops.py:3236
 msgid "Create an outline around the selected elements"
-msgstr ""
+msgstr "Erzeuge Umriss um ausgewählte Elemente"
 
 #: meerk40t/core/elements/element_treeops.py:3349 meerk40t/core/elements/element_treeops.py:3365 meerk40t/core/elements/element_treeops.py:3387 meerk40t/core/elements/element_treeops.py:3422 meerk40t/core/elements/element_treeops.py:3435 meerk40t/core/elements/element_treeops.py:3449 meerk40t/core/elements/element_treeops.py:3463
 msgid "Vectorization..."
-msgstr ""
+msgstr "Vektorisiere..."
 
 #: meerk40t/core/elements/element_treeops.py:3367
 msgid "Contour detection - shapes"
-msgstr ""
+msgstr "Kontour-Erkennung - Formen"
 
 #: meerk40t/core/elements/element_treeops.py:3371 meerk40t/core/elements/element_treeops.py:3394
 msgid "Recognize contours=shapes on the given element"
-msgstr ""
+msgstr "Erkenne Kontouren=Formen auf dem ausgewählten Bild"
 
 #: meerk40t/core/elements/element_treeops.py:3390
 msgid "Contour detection - bounding"
-msgstr ""
+msgstr "Kontour-Erkennung - Hülle"
 
 #: meerk40t/core/elements/element_treeops.py:3425 meerk40t/image/imagetools.py:1884
 msgid "Ignore inner areas"
-msgstr ""
+msgstr "Innere Bereiche ignorieren"
 
 #: meerk40t/core/elements/element_treeops.py:3427
 msgid "Inner areas will be ignored"
-msgstr ""
+msgstr "Formen innerhalb anderer Formen werden ignoriert"
 
 #: meerk40t/core/elements/element_treeops.py:3438
 msgid "Big objects"
-msgstr ""
+msgstr "Große Objekte"
 
 #: meerk40t/core/elements/element_treeops.py:3442
 msgid "Only large object will be recognized if checked"
-msgstr ""
+msgstr "Aktiv: Nur große Objekte werden erkannt"
 
 #: meerk40t/core/elements/element_treeops.py:3452
 msgid "Normal objects"
-msgstr ""
+msgstr "Mittlere Objekte"
 
 #: meerk40t/core/elements/element_treeops.py:3456
 msgid "Also medium sized objects will be recognized if checked"
-msgstr ""
+msgstr "Aktiv: Auch mittelgroße Objekte werden erkannt"
 
 #: meerk40t/core/elements/element_treeops.py:3466
 msgid "Small objects"
-msgstr ""
+msgstr "Kleine Objekte"
 
 #: meerk40t/core/elements/element_treeops.py:3470
 msgid "Also small objects will be recognized if checked"
-msgstr ""
+msgstr "Aktiv: Auch kleine Objekte werden erkannt"
 
 #: meerk40t/core/elements/element_treeops.py:3635
 msgid "Add a keyhole"
-msgstr ""
+msgstr "Füge Schlüsselloch hinzu"
 
 #: meerk40t/core/elements/element_treeops.py:3637
 msgid "Add a keyhole effect between the selected elements"
-msgstr ""
+msgstr "Fügt einen Schlüsselloch-Effekt zwischen den selektierten Objekten hinzu"
 
 #: meerk40t/core/elements/element_treeops.py:3649 meerk40t/core/elements/element_treeops.py:4106 meerk40t/gui/propertypanels/imageproperty.py:46
 msgid "Remove keyhole"
-msgstr ""
+msgstr "Entferne Schlüsselloch"
 
 #: meerk40t/core/elements/element_treeops.py:3760
 msgid "Rotate the selected elements by the given amount"
-msgstr ""
+msgstr "Rotiere die ausgewählten Elemente um..."
 
 #: meerk40t/core/elements/element_treeops.py:3778
 msgid "Reify user changes"
-msgstr ""
+msgstr "Wende Veränderungen an"
 
 #: meerk40t/core/elements/element_treeops.py:3780
 msgid "Integrate user scale, translate and rotate changes"
-msgstr ""
+msgstr "Integriert benutzerdefinierte Skalierungen, Verschiebungen und Drehungen"
 
 #: meerk40t/core/elements/element_treeops.py:3793
 msgid "Split paths into subelements (if any)"
-msgstr ""
+msgstr "Teile Pfad in Unterpfade auf (sofern vorhanden)"
 
 #: meerk40t/core/elements/element_treeops.py:3806
 msgid "Revert user scale, translate and rotate changes"
-msgstr ""
+msgstr "Macht benutzerdefinierte Skalierungen, Verschiebungen und Drehungen rückgängig"
 
 #: meerk40t/core/elements/element_treeops.py:3830
 msgid "Remove manipulation protection flag"
-msgstr ""
+msgstr "Entferne Manipulations-Schutz"
 
 #: meerk40t/core/elements/element_treeops.py:3840
 msgid "Set manipulation protection flag"
-msgstr ""
+msgstr "Setze Manipulations-Schutz"
 
 #: meerk40t/core/elements/element_treeops.py:3851
 msgid "Show/Hide the content of the regmark branch"
-msgstr ""
+msgstr "Zeige/Verberge Registriermarken"
 
 #: meerk40t/core/elements/element_treeops.py:3862
 msgid "Move the selected regmarks back to the element branch"
-msgstr ""
+msgstr "Verschiebe die ausgewählten Registriermarken zurück zu den Elementen"
 
 #: meerk40t/core/elements/element_treeops.py:3884
 msgid "Move the selected elements to the regmark branch"
-msgstr ""
+msgstr "Verschiebe die ausgewählten Elemente zu den Registriermarken"
 
 #: meerk40t/core/elements/element_treeops.py:3907
 msgid "Define a job starting point aka placement"
-msgstr ""
+msgstr "Definere einen Jobstartpunkt"
 
 #: meerk40t/core/elements/element_treeops.py:3936
 msgid "Set/remove magnet lines around the regmark element"
-msgstr ""
+msgstr "Setze/Entferne Magnetlinien rund um Begrenzungen der Registriermarke"
 
 #: meerk40t/core/elements/element_treeops.py:3946
 msgid "Set/remove magnet lines right through the middle of the regmark element"
-msgstr ""
+msgstr "Setze/Entferne Magnetlinien durch den Mittelpunkt der Registriermarke"
 
 #: meerk40t/core/elements/element_treeops.py:3959
 msgid "Split image into multiple subimages based on the grayscale level"
-msgstr ""
+msgstr "Teile Bild in Einzelbilder basierend auf Graustufenwert auf"
 
 #: meerk40t/core/elements/element_treeops.py:3977
 msgid "Allow manipulations of the image"
-msgstr ""
+msgstr "Erlaube Bild-Manipulation"
 
 #: meerk40t/core/elements/element_treeops.py:3988
 msgid "Prevent manipulations of the image"
-msgstr ""
+msgstr "Verhindere Bild-Manipulation"
 
 #: meerk40t/core/elements/element_treeops.py:3999
 msgid "Create a pixelated b/w copy of the image"
-msgstr ""
+msgstr "Erzeuge eine s/w Kopie des Bildes mittels Fehlerdiffusion"
 
 #: meerk40t/core/elements/element_treeops.py:4009
 msgid "Invert the image"
-msgstr ""
+msgstr "Invertiere das Bild"
 
 #: meerk40t/core/elements/element_treeops.py:4020
 msgid "Mirror the image along the Y-Axis"
-msgstr ""
+msgstr "Spiegel das Bild entlang der Y-Achse"
 
 #: meerk40t/core/elements/element_treeops.py:4030
 msgid "Mirror the image along the X-Axis"
-msgstr ""
+msgstr "Spiegel das Bild entlang der X-Achse"
 
 #: meerk40t/core/elements/element_treeops.py:4039
 msgid "Rotate the image by 90° clockwise"
-msgstr ""
+msgstr "Drehe das Bild um 90° im Uhrzeigersinn"
 
 #: meerk40t/core/elements/element_treeops.py:4048
 msgid "Rotate the image by 90° counterclockwise"
-msgstr ""
+msgstr "Drehe das Bild um 90° gegen den Uhrzeigersinn"
 
 #: meerk40t/core/elements/element_treeops.py:4060
 msgid "Identify and mark bigger white areas inside the image"
-msgstr ""
+msgstr "Identifiziere und markiere größere weiße Flächen im Bild"
 
 #: meerk40t/core/elements/element_treeops.py:4073
 msgid "Split image along white areas to reduce rastering time"
-msgstr ""
+msgstr "Teile Bild entlang weißer Fläschen zur Steigerung der Brenngeschwindigkeit"
 
 #: meerk40t/core/elements/element_treeops.py:4086
 msgid "Save the unmodified image to disk"
-msgstr ""
+msgstr "Speichere das Original-Bild"
 
 #: meerk40t/core/elements/element_treeops.py:4096
 msgid "Save the modified image to disk"
-msgstr ""
+msgstr "Speichere das veränderte Bild"
 
 #: meerk40t/core/elements/element_treeops.py:4108
 msgid "Remove the keyhole-link between image and shape"
-msgstr ""
+msgstr "Entferne den Schlüsselloch-Effekt"
